css/style.css
/* ... */
.myEmailField:focus, .myEmailField:hover { 
	outline: none;
	border-color: #d6d6d0;
	box-shadow: 0 0 10px #d6d6d0;
}

/* DVB Calculator */
sub, sup { /* compensate for <sub></sub> tagged text*/
	font-size: 90%;
	line-height: 0; 
	position: relative; 
	vertical-align: baseline; 
}

sup { top: -0.25em; }

sub { bottom: -0.25em; }

.spacer-main {
	height: 5px;
	padding: 0px;
}

.spacer-big {
	height: 20px;
	padding: 0px;
}

.spacer-normal {
	height: 10px;
	padding: 0px;
}

.spacer-short {
	height: 7.5px;
	padding: 0px;
}

.spacer-sub {
	height: 0px;
	padding: 0px;
}

/*jQuery Select Button width styling*/
#Calculator_Mode_select > label {
	width: 75px;
}

#DVB_Standard_select > label {
	width: 75px;
}

#Roll-Off_select > label {
	min-width: 36px;
/*	height: 3em;*/
}

#SI_prefix_select > label {
	min-width: 40px;
}

#Modulation_select > label {	/*Modulation Select jQuery buttons*/
	min-width: 58.5px;			/*inline CSS styling in javascript overwrites this for DVB-S2X*/
/*	height: 3em;*/
}

#ideal_QEF_EsNo_number,
#ideal_QEF_EbNo_number,
#actual_QEF_EsNo_number,
#actual_QEF_EbNo_number {
	width: 35px;
}

#Modulation_Multiplier_output_number {
	width: 15px;
}

#Efficiency_output_number {
	width: 120px;
}

#Transport_Stream_Rate_output_number,
#Symbol_Rate_output_number,
#Bandwidth_output_number {
	width: 70px;
}

input[type=number]::-webkit-inner-spin-button {
	-webkit-appearance: none;
/*	margin-left: -5px;*/
}

.input-number > input[type=number],
.input-number > input[type=text] {
	height: 2.0em;
	font-size: 110%;
	width: 75px;
}

.flex-container-wordle {
	display: flex;
	align-items: center;
	padding: 2px 4px 2px 4px;	/*top right bottom left*/
}

.flex-container {
	display: flex;
	align-items: center;
	padding-top: 5px;
}

/*
.flex-item-row {
	flex-direction: row;
}*/

.flex-QEF-container {
	display: flex;
	justify-content: flex-end;
	flex-direction: row;
    align-items: center;
    padding-top: 5px;
	line-height: 1.5rem;
}

/*fieldset > .flex-container { margin-left: -8px; }*/
.flex-space-around {
	justify-content: space-around;
}

.flex-space-around-wordle {
	justify-content: space-around;
	/* justify-content: space-evenly; */
}

.flex-container.flex-header {
	padding-top: 0px;
}

.flex-item {
	text-align: left;
}

.flex-item-center {
	text-align: center;
}

/*
.flex-QEF-item {
	
}*/

.flex-item-column {
	flex-direction: column;	
}

.flex-item-QEF-column {
	flex-direction: column;
/*	align-items: flex-end;*/
}

.QEF-left {
	padding-right: 5px;
}

/*
.full-width{
	width: 260px;
}*/

.main-left,
.input-left {
	width: 80px;
	text-align: right;
	padding-right: 5px;
}

.input-right {
	margin-left: auto;
/*	padding-right: 0px;*/
}

.output-left {
	width: 112px;
	text-align: right;
	padding-right: 4px;
}

.calculation-left {
	width: 80px;
	text-align: right;
	padding-right: 4px;
}

.input-number > input {
	padding-left: 3px;
}

.input-text > input {
	text-align: center;
	background-color: #000000;
	color: #ffffff;
	border: 2px solid #3a3a3c;
	width: 50px;
	height: 55px;
	/*text-transform: uppercase;*/
	border-radius: 0px;
	font-size: 2.5rem;
	font-weight: bold;
	caret-color: transparent;
	-webkit-touch-callout: none;
	text-decoration: none !important;
	padding: 0px 2px 0px 2px;	/* top right bottom left */
	margin: 0px 1px 0px 1px;
	touch-action: manipulation;
}

.main-ul {
	/* list-style-position: inside; */
	padding-inline-start: 20px !important;
	font-size: 14px !important;
}​

/* ul.main-ul > ul { */
/* ul.notmain { */
.notmain {
	list-style-type: none;
	padding-inline-start: -10px !important;
	font-size: 12px !important;
}​

input[type=date],
.datePicker {
	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
	color-scheme: dark;
	background-color: #000000 !important;
	color: #f3f3f3 !important;
	/* width: 120px; */
	font-size: 16px;
}

/* .datePicker { */
input[type=date]::-webkit-calendar-picker-indicator {
	/* background: transparent;
	bottom: 0;
	color: transparent;
	cursor: pointer;
	height: auto;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	width: auto; */
	/* filter: invert(100%); */
	margin-left: -1px;
	/* width: 15px; */
	/* right: -15px; */
	/* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="#ffffff" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>'); */
}

.dayNum {
	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
	background-color: #000000 !important;
	color: #f3f3f3 !important;
	outline: none;
	width: 35px !important;
	font-size: 16px;
	padding-left: 0px;
	text-align: left;
	display: inline-block;
	vertical-align: middle;
	box-sizing: border-box;
	height: 1.8em;
	line-height: 1.2;
	margin: 0 0 0 2px;
	-webkit-appearance: textfield;
	appearance: textfield;
}

#datePicker-div {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	flex-wrap: nowrap;
	white-space: nowrap;
	gap: 0;
}

#labelDate,
#labelDay {
	display: inline-flex;
	align-items: center;
	white-space: nowrap;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

.toastMaker {
	font-size: 12px;
}

.help {
	font-size: 16px;
}

.possibilities {
	font-size: 20px;
}
/* ... */

